VP 10.6.0 Changelog
------------------------

- increase robustness (and reduce temporary memory used) when handling very large images/textures

- add rothbauerw's and cyberpez' ball dropping sound code to builtin example tables

- add proper dithering to final output buffer (most noticable on gradients and/or low-quality/cheaper output monitors)

- remove caption and window borders in windowed mode (only re-enable/toggle the caption if ESC menu is brought up)

- fix some issues with the physically based lighting calculations, this can change the brightness (most noticably on the playfield) for some tables (more so if the (HDR) environment map is very high contrast, especially on the poles)

- add current active ball velocity/angular velocity, and the number of physics iterations per frame to the F11 debug output/stats

- fix some potential crashes and quirks in the manager dialogs (most notably the alpha test value in the image manager being copied to other elements when deleting an image)

- fix crashes if a POV file is broken/invalid

- fix normal computations of the old legacy primitive (i.e. that triangulated tube)

- show amount of vertices/polygons for a mesh primitive in the status bar

- do not ignore primitive setting 'Has Hit Event' anymore (before it was always implicitly on)

- add display selection in the video preferences

- fix some regressions (introduced with 10.5) with backdrop lights (most prominent: bulb lights had wrong falloff, the 'classic' lights wrong image mapping)
  as a bonus, this should also finally fix all issues seen with backdrop lights on intel/builtin graphics in the past
- disable transmit for backdrop bulb lights

- add support to read out the current hit threshold if the ball hits a Primitive or a HitTarget

- implement proper sRGB pipeline for runtime filtering (only for images/textures that are used in the 'standard' material)
