@@ -7,7 +7,8 @@ VP 10.6.0 Changelog
 
 - add proper dithering to final output buffer (most noticable on gradients and/or low-quality/cheaper output monitors)
 
-- remove caption and window borders in windowed mode (only re-enable/toggle the caption if ESC menu is brought up)
+- remove caption and window borders in windowed mode (only re-enable/toggle that caption if the 'ESC'/Pause-menu is brought up so that one can move the window around after unpausing again)
+- save position of the windowed mode player window
 
 - fix some issues with the physically based lighting calculations, this can change the brightness (most noticably on the playfield) for some tables (more so if the (HDR) environment map is very high contrast, especially on the poles)
 
